--- a/index.html
+++ b/index.html
@@ -8,6 +8,48 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>CV</h1>
+    <div class="root">
+      <header>
+        <img src="assets/cat.png" />
+        <span>
+          <h1>Alexander Latyshev</h1>
+          <h3>Frontend-Developer</h3>
+        </span>
+      </header>
+           
+      <div class="skills">
+        <h4>SKILLS</h4>
+        <ul>
+          <li>JavaScript</li>
+          <li>React</li>
+          <li>Redux</li>
+          <li>Webpack</li>
+          <li>Apollo GraphQL</li>
+          <li>Rest API</li>
+          <li>Git</li>
+          <li>Babel</li>
+          <li>SASS/SCSS</li>
+        </ul>
+      </div>
+
+      <div class="languages">
+        <h4>LANGUAGES</h4>
+        <ul>
+          <li>English (B1)</li>
+          <li>Russian (native)</li>
+          <li>Belarussian (native)</li>
+        </ul>
+      </div>
+
+      <div class="about">
+        <h4>ABOUT</h4>
+        <span>
+          I’m a 21 y.o. self-taught developer with a passion for frontend
+          programming and sport. I love to watch films with English subtitles,
+          conferences like YaTalks 2022 and other stuff about the frontend. Not
+          married. Full time, remote
+        </span>
+      </div>
+    </div>
   </body>
 </html>
